Possibilité d'ajouter un Campus

--- a/templates/registration/CreationCampus.html.twig
+++ b/templates/registration/CreationCampus.html.twig
@@ -1,15 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Création de campus{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <h1>Créer un Campus pour ENI</h1>
 
-    {{ form_start(registrationForm) }}
-        {{ form_widget(registrationForm) }}
+    {{ form_start(campusForm) }}
 
+        {{ form_widget(campusForm) }}
 
-
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+        <button type="submit" class="btn">Créer</button>
+    {{ form_end(campusForm) }}
 {% endblock %}
