Apparence du login modifié

--- a/templates/registration/CreationCampus.html.twig
+++ b/templates/registration/CreationCampus.html.twig
@@ -4,11 +4,12 @@
 
 {% block body %}
     <h1>Créer un Campus pour ENI</h1>
+    <div>
+        {{ form_start(campusForm) }}
 
-    {{ form_start(campusForm) }}
+            {{ form_widget(campusForm) }}
 
-        {{ form_widget(campusForm) }}
-
-        <button type="submit" class="btn">Créer</button>
-    {{ form_end(campusForm) }}
+            <button type="submit" class="btn">Créer</button>
+        {{ form_end(campusForm) }}
+    </div>
 {% endblock %}
