--- a/public/CSS/app.css
+++ b/public/CSS/app.css
@@ -1,4 +1,9 @@
- .menu {
+ *{
+     margin: 0;
+     padding: 0;
+     box-sizing: border-box;
+ }
+.menu {
      display: flex;
      flex-direction: row;
 
@@ -8,4 +13,45 @@
      margin: 1em;
      max-width: 100%;
      height: auto;
+ }
+ .body-login{
+     background: url('../img/image-de-fond.jpg') no-repeat center;
+     background-size: cover;
+     font-family: sans-serif;
+ }
+
+ .login-box{
+     height: 100vh;
+     width: 100vw;
+     display:  flex;
+     justify-content: center;
+     align-items: center;
+ }
+
+ .form-login{
+     position: relative;
+     /*width: 100%;*/
+     /* max-width: 380px;*/
+     padding: 80px 40px 40px;
+     background-color: rgba(0,0,0,0.8);
+     border-radius: 15px;
+     color: white ;
+     box-shadow: 5px 15px 15px black;
+
+ }
+ .form-login input {
+     width: 100%;
+     padding: 10px 0;
+     letter-spacing: 1px;
+     margin-bottom: 30px;
+     border-radius: 5px;
+     background-color: transparent;
+     color: inherit;
+ }
+
+ .form-login .btn {
+     border-bottom: 10px;
+     border-radius: 20px;
+     color: black;
+     background-color: rgba(255, 255, 255, 0.8);
  }
