--- a/public/CSS/app.css
+++ b/public/CSS/app.css
@@ -3,11 +3,10 @@
      padding: 0;
      box-sizing: border-box;
  }
+
 .menu {
      display: flex;
      flex-direction: row;
-
-
 }
  img {
      margin: 1em;
@@ -27,31 +26,42 @@
      justify-content: center;
      align-items: center;
  }
-
+.titre-login{
+    text-align:center;
+    color: #fdfdfd;
+    padding-bottom: 40px;
+}
  .form-login{
      position: relative;
      /*width: 100%;*/
      /* max-width: 380px;*/
-     padding: 80px 40px 40px;
-     background-color: rgba(0,0,0,0.8);
+     padding: 60px 40px 40px;
+     background-color: rgba(0, 0, 0, 0.8);
      border-radius: 15px;
      color: white ;
      box-shadow: 5px 15px 15px black;
 
  }
- .form-login input {
+ .core-login input  {
      width: 100%;
      padding: 10px 0;
+     text-align: center;
      letter-spacing: 1px;
      margin-bottom: 30px;
+     border: solid 1px;
      border-radius: 5px;
-     background-color: transparent;
+     background-color: rgba(255, 255, 255, 0.2);;
      color: inherit;
  }
 
  .form-login .btn {
-     border-bottom: 10px;
+
      border-radius: 20px;
      color: black;
+     margin-bottom: 10px;
      background-color: rgba(255, 255, 255, 0.8);
+ }
+ .login-remember {
+    padding-bottom: 25px;
+
  }
