--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Se Connecter {% endblock %}
 
 {% block body %}
+
     <div class="body-login">
         <div class="login-box">
             <form method="post" class="form-login">
@@ -16,34 +17,38 @@
                     </div>
                 {% endif %}
 
-                <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-                <div class="text-box">
-                    <!--<label for="inputMail">Mail</label>-->
-                    <input type="text" placeholder="Mail" value="{{ last_username }}" name="mail" id="inputMail" class="textform" autocomplete="username" required autofocus>
-                </div>
-                <div class="text-box">
-                    <!--<label for="inputPassword">Password</label>-->
-                   <input type="password" placeholder="Password" name="password" id="inputPassword" class="textform" autocomplete="current-password" required>
-                </div>
-                    <input type="hidden" name="_csrf_token"
-                           value="{{ csrf_token('authenticate') }}"
-                   >
-
-
-                {#
-                    Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-                    See https://symfony.com/doc/current/security/remember_me.html
-
-                    <div class="checkbox mb-3">
-                        <label>
-                            <input type="checkbox" name="_remember_me"> Remember me
-                        </label>
+                <h1 class="titre-login">Login</h1>
+                <div class="core-login">
+                    <div class="text-box">
+                        <!--<label for="inputMail">Mail</label>-->
+                        <input type="text" placeholder="Mail" value="{{ last_username }}" name="mail" id="inputMail" class="textform" autocomplete="username" required autofocus>
                     </div>
-                #}
-                <input type="submit" class="btn" name="sign in" value="Se connecter">
-                <!--<button class="Sign-in" type="submit">
-                    Sign in
-                </button>-->
+                    <div class="text-box">
+                        <!--<label for="inputPassword">Password</label>-->
+                       <input type="password" placeholder="Password" name="password" id="inputPassword" class="textform" autocomplete="current-password" required>
+                    </div>
+                        <input type="hidden" name="_csrf_token"
+                               value="{{ csrf_token('authenticate') }}"
+                       >
+
+
+                    {#
+                        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+                        See https://symfony.com/doc/current/security/remember_me.html
+
+                        <div class="checkbox mb-3">
+                            <label>
+                                <input type="checkbox" name="_remember_me"> Remember me
+                            </label>
+                        </div>
+                    #}
+                    <input type="submit" class="btn" name="sign in" value="Se connecter">
+                </div>
+                <div class="login-remember">
+                    <input type="Checkbox" id="login-checkbox"  value="Remember me" />
+                    <label for="login-checkbox" >Remember me</label>
+                </div>
+
                 <a href="#" class="forget-password">Forgot Password</a>
             </form>
         </div>
