--- a/public/CSS/app.css
+++ b/public/CSS/app.css
@@ -33,8 +33,8 @@
 }
  .form-login{
      position: relative;
-     /*width: 100%;*/
-     /* max-width: 380px;*/
+     width: 100%;
+     max-width: 360px;
      padding: 60px 40px 40px;
      background-color: rgba(0, 0, 0, 0.8);
      border-radius: 15px;
