--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,14 +9,17 @@
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
             <link rel="stylesheet" href="{{ asset('css/app.css') }}">
         {% endblock %}
-        {% include ('inc/header.html.twig') %}
+
 
         {% block javascripts %}
             {#{{ encore_entry_script_tags('app') }}#}
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+
+    {% block body %}
+
+       {% endblock %}
 
     </body>
 </html>
