--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
 
     <div class="body-login">
+        {% include ('inc/header.html.twig') %}
         <div class="login-box">
             <form method="post" class="form-login">
                 {% if error %}
@@ -31,22 +32,11 @@
                                value="{{ csrf_token('authenticate') }}"
                        >
 
-
-                    {#
-                        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-                        See https://symfony.com/doc/current/security/remember_me.html
-
-                        <div class="checkbox mb-3">
-                            <label>
-                                <input type="checkbox" name="_remember_me"> Remember me
-                            </label>
-                        </div>
-                    #}
                     <input type="submit" class="btn" name="sign in" value="Se connecter">
                 </div>
                 <div class="login-remember">
-                    <input type="Checkbox" id="login-checkbox"  value="Remember me" />
-                    <label for="login-checkbox" >Remember me</label>
+                    <input type="Checkbox" id="remember_me"  name="_remember_me" />
+                    <label for="remember_me" >Remember me</label>
                 </div>
 
                 <a href="#" class="forget-password">Forgot Password</a>
