--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -23,7 +23,7 @@
                 <div class="core-login">
                     <div class="text-box">
 
-                        <input type="text" placeholder="Mail" value="" name="mail" id="inputMail" class="textform" autocomplete="username" required autofocus>
+                        <input type="text" placeholder="Pseudo ou Mail" value="" name="mail" id="inputMail" class="textform" autocomplete="username" required autofocus>
                     </div>
                     <div class="text-box">
 
