--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,9 +3,12 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
+
+    <div class="container">
+        <div class="row col-6">
 <form method="post">
     {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        <div class="alert alert-danger">Les informations d'identification sont invalides.</div>
     {% endif %}
 
     {% if app.user %}
@@ -14,10 +17,10 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputMail">Mail</label>
+    <h1 class="h3 mb-3 font-weight-normal">Veuillez vous connecter</h1>
+    <label for="inputMail">Email</label>
     <input type="text" value="{{ last_username }}" name="mail" id="inputMail" class="form-control" autocomplete="username" required autofocus>
-    <label for="inputPassword">Password</label>
+    <label for="inputPassword">Mot de passe</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
     <input type="hidden" name="_csrf_token"
@@ -36,7 +39,9 @@
     #}
 
     <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+        Envoyer
     </button>
 </form>
+        </div>
+    </div>
 {% endblock %}
