--- a/public/CSS/app.css
+++ b/public/CSS/app.css
@@ -1,11 +1,67 @@
- .menu {
+ *{
+     margin: 0;
+     padding: 0;
+     box-sizing: border-box;
+ }
+
+.menu {
      display: flex;
      flex-direction: row;
-
-
 }
  img {
      margin: 1em;
      max-width: 100%;
      height: auto;
+ }
+ .body-login{
+     background: url('../img/image-de-fond.jpg') no-repeat center;
+     background-size: cover;
+     font-family: sans-serif;
+ }
+
+ .login-box{
+     height: 100vh;
+     width: 100vw;
+     display:  flex;
+     justify-content: center;
+     align-items: center;
+ }
+.titre-login{
+    text-align:center;
+    color: #fdfdfd;
+    padding-bottom: 40px;
+}
+ .form-login{
+     position: relative;
+     width: 100%;
+     max-width: 360px;
+     padding: 60px 40px 40px;
+     background-color: rgba(0, 0, 0, 0.8);
+     border-radius: 15px;
+     color: white ;
+     box-shadow: 5px 15px 15px black;
+
+ }
+ .core-login input  {
+     width: 100%;
+     padding: 10px 0;
+     text-align: center;
+     letter-spacing: 1px;
+     margin-bottom: 30px;
+     border: solid 1px;
+     border-radius: 5px;
+     background-color: rgba(255, 255, 255, 0.2);;
+     color: inherit;
+ }
+
+ .form-login .btn {
+
+     border-radius: 20px;
+     color: black;
+     margin-bottom: 10px;
+     background-color: rgba(255, 255, 255, 0.8);
+ }
+ .login-remember {
+    padding-bottom: 25px;
+
  }
