--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,15 +6,19 @@
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
-          
+        
         {% endblock %}
+
 
         {% block javascripts %}
             {#{{ encore_entry_script_tags('app') }}#}
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+
+    {% block body %}
+
+       {% endblock %}
 
     </body>
 </html>
